--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="Untitled-1.css">
     <link rel="icon" href="1icon.png">
     <title>Проверка результата матча</title>
+    
 </head>
 <body>
+    
     <h1>Проверка результата матча</h1>
-
+    <h1>СПАРТАК VS ЦСКА</h1>
     <p id="actualScoreContainer" class="hidden">
         Фактический счёт: <span id="actualScore"></span>
     </p>
@@ -25,6 +27,7 @@
     <input type="text" id="predictedOutcome">
 
     <button onclick="checkMatch()">Проверить</button>
+    <button onclick="reset()">Еще раз</button>
 
     <p id="result"></p>
 
