--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Untitled-1.css">
     <link rel="icon" href="1icon.png">
     <title>Проверка результата матча</title>
     
 </head>
-<body>
+
+<body background="https://image.kurier.at/images/cfs_landscape_1864w_1049h/3224141/46-143289917.jpg">
     
     <h1>Проверка результата матча</h1>
     <h1>СПАРТАК VS ЦСКА</h1>
@@ -32,5 +30,6 @@
     <p id="result"></p>
 
     <script src="Untitled-1.js"></script>
+
 </body>
 </html>
